<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.luiscesjr.aquariodebolso.aquariodebolso.aquamarinho"
    android:background="#ff282bff">


    <ImageButton
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/clown_fish128"
        android:layout_marginTop="45dp"
        android:background="@drawable/buttonbackground"/>

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentRight="true"
        android:src="@drawable/coral128"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttonbackground"/>

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:src="@drawable/octopus128"
        android:layout_toRightOf="@+id/button"
        android:layout_marginBottom="63dp"
        android:background="@drawable/buttonbackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/marinho_content1"
        android:id="@+id/textView"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/marinho_content2"
        android:id="@+id/textView2"
        android:layout_below="@+id/button2"
        android:layout_toRightOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/marinho_content3"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
