<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.luiscesjr.aquariodebolso.aquariodebolso.ferramentasaqua.ferramentaaquario"
    android:background="@drawable/bamboobackground"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Volumeaqua"
        android:id="@+id/textView"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:inputType="number|phone"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/num1"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:inputType="number|phone"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/num2"
        android:layout_alignTop="@+id/num3"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:inputType="number|phone"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/num3"
        android:layout_alignTop="@+id/num1"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/display"
        android:layout_below="@+id/num2"
        android:layout_toLeftOf="@+id/num3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculo"
        android:id="@+id/btnCalculate"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/comp"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/alt"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_above="@+id/num3"
        android:layout_alignRight="@+id/openpopup2"
        android:layout_alignEnd="@+id/openpopup2" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/larg"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="190dp"
        android:id="@+id/imageView"
        android:background="@drawable/buttonbackground"
        android:src="@drawable/aquaretangulotrans"
        android:layout_below="@+id/openpopup2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/openpopup2"
        android:drawableTop="@drawable/questions64"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonbackground"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/weight256"
            android:layout_below="@+id/display"
            android:layout_toLeftOf="@+id/openpopup2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/comp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/textView5"
            android:layout_below="@+id/imageView2"
            android:layout_alignRight="@+id/openpopup2"
            android:layout_alignEnd="@+id/openpopup2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/larg"
            android:id="@+id/textView6"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alt"
            android:id="@+id/textView7"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@+id/imageView2"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculo"
            android:id="@+id/btnCalculate2"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:inputType="number|phone"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/num4"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:inputType="number|phone"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/num5"
            android:layout_below="@+id/textView5"
            android:layout_alignRight="@+id/btnCalculate2"
            android:layout_alignEnd="@+id/btnCalculate2" />

        <EditText
            android:inputType="number|phone"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/num6"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/display2"
            android:layout_marginTop="46dp"
            android:layout_below="@+id/num7"
            android:layout_centerHorizontal="true" />

        <EditText
            android:inputType="number|phone"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/num7"
            android:layout_marginTop="75dp"
            android:layout_below="@+id/num4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:inputType="number|phone"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/num8"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignRight="@+id/btnCalculate"
            android:layout_alignEnd="@+id/btnCalculate" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/esp"
            android:id="@+id/textView8"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_above="@+id/display2"
            android:layout_toLeftOf="@+id/num2" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/pesoagua"
            android:id="@+id/textView9"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignTop="@+id/textView8"
            android:layout_alignLeft="@+id/num8"
            android:layout_alignStart="@+id/num8" />

    </RelativeLayout>
</ScrollView>
